# dekko

./: .gitignore  .mcp.json  CHANGELOG.md  README.md  install.sh  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.dekko/: .gitignore  MAP.md  map.json
.github/workflows/: ci.yml  release.yml
benchmarks/: README.md  measure.py
commands/: map.md
skills/dekko-notes/: SKILL.md
skills/dekko-orient/: SKILL.md
src/dekko/: __init__.py  affected.py  cache.py  classify.py  cli.py  contextpack.py  diff.py  export.py  extractor.py  extractor_generic.py  grammars.py  hooks.py  languages.py  ledger.py  mapfile.py  model.py  notes.py  orient.py  outline.py  query.py  relevance.py  render_html.py  render_json.py  render_lean.py  render_md.py  resolver.py  server.py  source.py  stats.py  summary.py  textutil.py  trace.py  unused.py  walker.py  workset.py
src/lidar_map/: __init__.py  cache.py  cli.py  contextpack.py  diff.py  export.py  extractor.py  mapfile.py  model.py  query.py  render_json.py  render_md.py  resolver.py  server.py  stats.py  trace.py  unused.py  walker.py
tests/: conftest.py  test_affected.py  test_benchmark.py  test_budget.py  test_cache.py  test_cli.py  test_contextpack.py  test_contextpack_v2.py  test_density.py  test_diagram.py  test_diff.py  test_docs.py  test_export.py  test_extractor.py  test_freshness_fastpath.py  test_generic.py  test_grammars.py  test_hooks.py  test_hotspots.py  test_html.py  test_languages.py  test_lean.py  test_ledger.py  test_mapfile.py  test_noise.py  test_notes.py  test_orient.py  test_outline.py  test_overview.py  test_python_floor.py  test_query.py  test_query_surface.py  test_relevance.py  test_render_md.py  test_resolver.py  test_schema_v3.py  test_server.py  test_shard.py  test_stats.py  test_status.py  (+7 more)
tests/fixtures/c/: main.c  math.c
tests/fixtures/cpp/: shapes.cpp
tests/fixtures/go/: srv.go
tests/fixtures/java/: App.java
tests/fixtures/js/: app.js  lib.js
tests/fixtures/python/: main.py  util.py
tests/fixtures/ruby/: store.rb
tests/fixtures/rust/: lib.rs  main.rs
tests/fixtures/transcripts/: session_basic.jsonl
tests/fixtures/ts/: svc.ts
tool/: extractor.py  extractor_generic.py  lidar.py  model.py  render_json.py  render_md.py  resolver.py  walker.py
