[project]
name = "dekko"
version = "0.12.1"
description = "Static code map generator: MAP.md + map.json for any repo, plus a Claude Code /map plugin"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Austin Ahlijian", email = "aahlijia@gmail.com" }
]
requires-python = ">=3.10"
keywords = ["code-map", "tree-sitter", "static-analysis", "claude-code"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
]
dependencies = [
    "tree-sitter>=0.23",
    # Tier-1 grammars: the nine languages dekko parses with per-language
    # queries, shipped as individual packages so a default install is
    # fully offline (no runtime grammar download). tree-sitter-typescript
    # provides both `typescript` and `tsx`.
    "tree-sitter-c>=0.23",
    "tree-sitter-cpp>=0.23",
    "tree-sitter-go>=0.23",
    "tree-sitter-java>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-python>=0.23",
    "tree-sitter-rust>=0.23",
    "tree-sitter-typescript>=0.23",
    "pathspec>=0.12",
]

[project.optional-dependencies]
# Accurate token counting for the --budget caps and the lean map.
# Optional: without it, dekko falls back to a ~4-chars/token estimate.
tokenizer = ["tiktoken>=0.7"]
# Tier-2: the ~55 extra languages, parsed generically. Pulls in the
# grammar pack, which downloads grammars on demand. `pip install
# dekko[all]` to enable them.
all = ["tree-sitter-language-pack>=0.6"]

[project.urls]
Repository = "https://github.com/aahlijia/dekko"
Issues = "https://github.com/aahlijia/dekko/issues"

[project.scripts]
dekko = "dekko.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dekko"]

[tool.hatch.build.targets.wheel.force-include]
".claude-plugin" = "dekko/_plugin/.claude-plugin"
"commands" = "dekko/_plugin/commands"
"skills" = "dekko/_plugin/skills"
".mcp.json" = "dekko/_plugin/.mcp.json"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 79
target-version = "py310"
indent-width = 4
extend-exclude = ["tests/fixtures"]

[tool.ruff.lint]
select = ["F", "E", "W", "C90", "I", "N", "ANN", "B", "A", "C4", "PERF", "RUF"]
ignore = ["I001", "ANN401", "B905", "PERF203", "RUF013"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
